# secure-rewind-and-discard-rust-ffi

./: .gitignore  LICENSE  README.md
benchmark_images/: README.md
benchmark_scripts/: bench_all.sh  malloc_benchmark.sh  micro_benchmark.sh  png.sh  rb_abon_opt.py  rb_micro.py  rb_snappy.py  rust_benchmark_abon.py  snappy.sh  snappy_opt.sh
empty_sandbox/: Cargo.toml
empty_sandbox/src/: lib.rs
issue1/: Cargo.toml  build.rs
issue1/src/: main.rs
log/: README.md
microbenchmark/: Cargo.toml
microbenchmark/src/: main.rs
microbenchmark_malloc/: Cargo.toml
microbenchmark_malloc/src/: main.rs
png/: Cargo.toml  README.md
png/src/: main.rs
snappy/: Cargo.toml  rust-toolchain.toml
snappy/src/: main.rs
