[package]
name = "microbenchmark_malloc"
version = "0.1.0"
edition = "2021"
license = "BSD-3"
keywords = ["unsafe", "in-process", "intel-mpk"]
authors = ["Merve Gülmez, merve.gulmez@kuleuven.be"]
homepage = "https://secure-rewind-and-discard.github.io/"
build = "build.rs"


[dependencies]
libc = "*"
sdradrustffi = { git = "https://github.com/secure-rewind-and-discard/sdradrustffi.git", optional = true}
sandcrust = { git = "https://github.com/atopia/sandcrust", optional = true}
empty_sandbox = { path = "../empty_sandbox", optional = true}
cargo-binutils = "0.3.6"
rand = "*"
rand_pcg = "*"


[features]
sdradrustffi = ["dep:sdradrustffi"]
sandcrust = ["dep:sandcrust"]
empty_sandbox = ["dep:empty_sandbox"]
bincode_v1 = ["sdradrustffi/bincode_v1"]
bincode_v2 = ["sdradrustffi/bincode_v2"]
abomonation_v1 = ["sdradrustffi/abomonation_v1"]
abomonation_v2 = ["sdradrustffi/abomonation_v2"]

